--- a/app/css/main.css
+++ b/app/css/main.css
@@ -33,6 +33,23 @@ ul {
   opacity: 1 !important;
   background: url("../img/close.png") center/cover no-repeat !important; }
 
+.ymaps-2-1-78-ground-pane {
+  filter: grayscale(1);
+  -ms-filter: grayscale(1);
+  -webkit-filter: grayscale(1);
+  -moz-filter: grayscale(1);
+  -o-filter: grayscale(1); }
+
+.clusterIcon {
+  background-color: #1e355d;
+  width: 50px;
+  height: 50px;
+  color: #fff;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+
 .balloon__content {
   width: 300px; }
 
